# clawsynapse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  README_CN.md  config.example.yaml  go.mod  go.sum  package-lock.json  package.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config-examples/: mount-allowlist.json
container-agno/: Dockerfile  build.sh  pilotctl-wrapper.sh
container-agno/agent-runner/: entrypoint.sh  pyproject.toml
container-agno/agent-runner/src/: config.py  ipc.py  main.py  prompts.py  tools.py
desktop/: bump-version.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: app.css  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  DEBUG_CHECKLIST.md  REQUIREMENTS.md  SDK_DEEP_DIVE.md  SECURITY.md  SPEC.md  clawsynapse-concepts.md  clawsynapse-integration.md  clawsynapse-messaging.md  clawsynapse-operations.md  clawsynapse-protocol.md  clawsynapse-trust.md  clawsynapse.md  cli.md  concepts.md  integration.md  messaging.md  nats-bridge.md  operations.md  overview.md  protocol.md  trust.md
launchd/: com.nanoclaw.plist
plans/: todo.md
scripts/: install.sh  stage-prod-deps.sh
src/: config.ts  container-runner.ts  db.ts  group-queue.ts  index.ts  ipc-watcher.ts  logger.ts  monitor-api.ts  monitor-events.ts  mount-security.ts  pilot.ts  task-scheduler.ts  types.ts
(+89 files in other folders)
