[project]
name = "agent-runner"
version = "1.0.0"
description = "NanoClaw Agno Agent Runner"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.5",
    "aiosqlite>=0.22.1",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "openai>=2.17.0",
    "openinference-instrumentation-agno>=0.1.12",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "sqlalchemy>=2.0.46",
]
